--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ms": "^2.1.1",
     "snekfetch": "^4.0.4",
     "superagent": "^3.8.3",
-    "weather-js": "^2.0.0"
+    "weather-js": "^2.0.0",
+      "urban": "^0.3.2"
   }
 }
