--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "snekfetch": "^4.0.4",
     "superagent": "^3.8.3",
     "weather-js": "^2.0.0",
-      "urban": "^0.3.2"
+      "urban": "^0.3.2",
+     "moment-duration-format": "^2.2.2"
   }
 }
