--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "superagent": "^3.8.3",
     "weather-js": "^2.0.0",
       "urban": "^0.3.2",
+      "moment": "^2.22.2",
      "moment-duration-format": "^2.2.2"
   }
 }
