--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "weather-js": "^2.0.0",
       "urban": "^0.3.2",
       "moment": "^2.22.2",
+        "cooldown": "^0.2.0",
      "moment-duration-format": "^2.2.2"
   }
 }
