--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
       "moment": "^2.22.2",
         "cooldown": "^0.2.0",
      "moment-duration-format": "^2.2.2",
-       "got": "^9.2.2"
+       "got": "^9.2.2",
+        "parse-ms": "^2.0.0"
   }
 }
