--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
        "got": "^9.2.2",
         "parse-ms": "^2.0.0",
        "memejsfork": "^1.0.0",
-     "random-puppy": "^1.1.0"
+     "random-puppy": "^1.1.0",
+        "moment-timezone": "^0.5.23"
   }
 }
